// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlight start and end 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line highlight"
  >
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
    <span
      className="token plain"
    >
       
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token keyword"
    >
      let
    </span>
    <span
      className="token plain"
    >
       other 
    </span>
    <span
      className="token operator"
    >
      =
    </span>
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token string"
    >
      "no highlight"
    </span>
  </div>
</pre>
`;

exports[`highlights inline comment 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line highlight"
  >
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token comment"
    >
      
    </span>
  </div>
</pre>
`;

exports[`multiple highlights start and end 1`] = `
.emotion-1 {
  display: inline-block;
}

<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line highlight"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token comment"
    >
      // i am highlighted!
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain emotion-1"
    >
      

    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token comment"
    >
      // no highlight here ...
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain emotion-1"
    >
      

    </span>
  </div>
  <div
    className="token-line highlight"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token comment"
    >
      // i am highlighted, and
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line highlight"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token comment"
    >
      // so am i!
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain emotion-1"
    >
      

    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token comment"
    >
      // no highlight here either ...
    </span>
  </div>
</pre>
`;

exports[`no highlight 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
  </div>
</pre>
`;

exports[`renders a code block 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
  </div>
</pre>
`;

exports[`renders with other languages 1`] = `
<pre
  className="language-php prism-code language-php emotion-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
      &lt;h1&gt;Hello&lt;/h1&gt;
    </span>
  </div>
</pre>
`;
